--- a/proyectohit/index.html
+++ b/proyectohit/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>ahorcado</title>
+    <title>ahorcado platzi</title>
     <script type="text/javascript" src="js.js">
 
 
