--- a/proyectohit/index.html
+++ b/proyectohit/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-<h1>ADIVINA LA PALABRA PARA GANAR EL JUEGO</h1>
+<h1>ADIVINA LA PALABRA no se puede </h1>
 <canvas id="c"></canvas>
 <div>
 <label for="letra">Elige una Letra</label>
