--- a/proyectohit/index.html
+++ b/proyectohit/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>ahorcado platzi</title>
+    <title>ahorcado platzi juego </title>
     <script type="text/javascript" src="js.js">
 
 
